--- a/views/pd/rajossho/rajosshoTableAll.ejs
+++ b/views/pd/rajossho/rajosshoTableAll.ejs
@@ -1,5 +1,5 @@
 <%if (centers.length >0){ %>
-    <table class="table table-bordered table-striped" >
+    <table id="tblexportData" class="table table-bordered table-striped" >
     <thead>
     <tr>
         <th>ক্রমিক নং</th>
