--- a/views/center/expense/pdf.ejs
+++ b/views/center/expense/pdf.ejs
@@ -23,6 +23,7 @@
     td,
     th {
       border: 1px solid black;
+      font: NikoshFont;
     }
 
     .table {
@@ -44,6 +45,10 @@
 
     .inline-block-child {
       display: inline-block;
+    }
+    @font-face {
+      font-family: NikoshFont;
+      src: url(../../../public/Nikosh.ttf);
     }
   </style>
 </head>
@@ -72,7 +77,7 @@
         <thead>
           <tr>
             <th>কোড নং</th>
-            <th>খাতের নাম</th>
+            <th style="text-align: left; padding-left: 10px;">খাতের নাম</th>
             <th>চলতি অর্থ বছরের প্রাপ্ত বরাদ্দ</th>
             <th>জুলাই</th>
             <th>আগস্ট</th>
@@ -95,7 +100,7 @@
           <% records.forEach(function(row){ %>
           <tr>
             <td><%= row.code %></td>
-            <td><%= row.khat %></td>
+            <td style="text-align: left; padding-left: 10px;"><%= row.khat %></td>
             <td><%= row.boraddo %></td>
             <td><%= row.july1 %></td>
             <td><%= row.august1 %></td>
@@ -123,7 +128,7 @@
         <thead>
           <tr>
             <th>কোড নং</th>
-            <th>খাতের নাম</th>
+            <th style="text-align: left; padding-left: 10px;">খাতের নাম</th>
             <th>চলতি অর্থ বছরের প্রাপ্ত বরাদ্দ</th>
             <th>জুলাই</th>
             <th>আগস্ট</th>
