--- a/views/pd/employee/chak1/employeeChak1.ejs
+++ b/views/pd/employee/chak1/employeeChak1.ejs
@@ -102,7 +102,7 @@
         var tableHTMLData = tableSelect.outerHTML.replace(/ /g, '%20');
         
         // Specify file name
-        filename = filename?filename+'.xls':'export_excel_data.xls';
+        filename = `report-${new Date().toLocaleDateString()}.xlsx`;
         
         // Create download link element
         downloadurl = document.createElement("a");
