--- a/views/pd/expense/newKhorochCodeForm.ejs
+++ b/views/pd/expense/newKhorochCodeForm.ejs
@@ -1,61 +1,86 @@
 <%- include('../../includes/header')-%>
-        <div class="wrapper">
-          <%- include('../../includes/topbar')-%>
-            <div class="page-wrap">
-              <%- include('../../includes/sidebar')-%>
-              <div class="main-content">
-                <div class="container-fluid">
-                    <div class="row clearfix">
-                    <div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-                        <div class="panel panel-info">
-                            <div class="panel-heading">
-                                <div class="panel-title"><h2>খরচের (বিএস্টেটমেন্ট) হিসাব বিবরণীর কোডসমূহ এর ফর্ম</h2></div>
-                                <p><%
-                                if(success !=''){ %>
-                                <%= success %>
-                                    <% } %>
-                                </p>
-                                </div>  
-                            <div class="panel-body" >
-                                <form action="/pd/newKhorochCode" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
-                                    <div id="signupalert" style="display:none" class="alert alert-danger">
-                                        <p>Error:</p>
-                                        <span></span>
-                                    </div>
-
-                                        
-                                    <div class="form-group">
-                                        <label for="code" class="col-md-3 control-label">কোড নং</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="code" placeholder="কোড নং">
-                                        </div>
-                                    </div>
-                                    
-                                    <div class="form-group">
-                                        <label for="upokhat" class="col-md-3 control-label">খাতের নাম</label>
-                                        <div class="col-md-9">
-                                            <input type="text" class="form-control" name="khat" placeholder="খাতের নাম">
-                                        </div>
-                                    </div> 
-
-                                    
-                                    
-                                    <div class="form-group">
-                                        <!-- Button -->                                        
-                                        <div class="col-md-offset-3 col-md-9">
-                                        <input type="submit" name="submit" value="submit" class="btn btn-primary">   
-                                        </div>
-                                    </div>
-                                    
-                                    
-                                        
-                                    
-                                </form>
-                            </div>
-                        </div>
-                    </div>
+<div class="wrapper">
+  <%- include('../../includes/topbar')-%>
+  <div class="page-wrap">
+    <%- include('../../includes/sidebar')-%>
+    <div class="main-content">
+      <div class="container-fluid">
+        <div class="row clearfix">
+          <div
+            id="signupbox"
+            style="margin-top: 50px"
+            class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2"
+          >
+            <div class="panel panel-info">
+              <div class="panel-heading">
+                <div class="panel-title">
+                  <h2>খরচের (বিএস্টেটমেন্ট) হিসাব বিবরণীর কোডসমূহ এর ফর্ম</h2>
                 </div>
+                <p><% if(success !=''){ %> <%= success %> <% } %></p>
+              </div>
+              <div class="panel-body">
+                <form
+                  action="/pd/newKhorochCode"
+                  id="FieldTrialForm"
+                  class="form-horizontal"
+                  method="post"
+                  role="form"
+                >
+                  <div
+                    id="signupalert"
+                    style="display: none"
+                    class="alert alert-danger"
+                  >
+                    <p>Error:</p>
+                    <span></span>
+                  </div>
+
+                  <div class="form-group">
+                    <label for="code" class="col-md-3 control-label"
+                      >কোড নং</label
+                    >
+                    <div class="col-md-9">
+                      <input
+                        type="text"
+                        class="form-control"
+                        name="code"
+                        placeholder="কোড নং"
+                      />
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    <label for="upokhat" class="col-md-3 control-label"
+                      >খাতের নাম</label
+                    >
+                    <div class="col-md-9">
+                      <input
+                        type="text"
+                        class="form-control"
+                        name="khat"
+                        placeholder="খাতের নাম"
+                      />
+                    </div>
+                  </div>
+
+                  <div class="form-group">
+                    <!-- Button -->
+                    <div class="col-md-offset-3 col-md-9">
+                      <input
+                        type="submit"
+                        name="submit"
+                        value="submit"
+                        class="btn btn-primary"
+                      />
+                    </div>
+                  </div>
+                </form>
+              </div>
             </div>
+          </div>
         </div>
+      </div>
     </div>
-<%- include('../../includes/footer')-%>
+  </div>
+  <%- include('../../includes/footer')-%>
+</div>
