--- a/views/pd/rajossho/pdfAll.ejs
+++ b/views/pd/rajossho/pdfAll.ejs
@@ -89,7 +89,7 @@
         <thead>
           <tr>
             <th>ক্রমিক নং</th>
-            <th>সেন্টারের নাম</th>
+            <th style="text-align: left; padding-left: 10px;">সেন্টারের নাম</th>
             <th>জুলাই</th>
             <th>আগস্ট</th>
             <th>সেপ্টে</th>
@@ -122,7 +122,7 @@
           <% centers.forEach(function(center,index){ %>
           <tr>
             <td><%=index+1%></td>
-            <td><%=center.center %></td>
+            <td style="text-align: left; padding-left: 10px;"><%=center.center %></td>
             <% var july1=0;%>
             <% var august1=0;%>
             <% var sept1=0;%>
@@ -209,7 +209,7 @@
         <thead>
           <tr>
             <th>ক্রমিক নং</th>
-            <th>সেন্টারের নাম</th>
+            <th style="text-align: left; padding-left: 10px;">সেন্টারের নাম</th>
             <th>জুলাই</th>
             <th>আগস্ট</th>
             <th>সেপ্টে</th>
